--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
     "editor.wordWrap": "on",
     "editor.formateOnSave": true,
     "git.ignoreLimitWarning": true,
+    "liveServer.settings.port": 5501,
 }
